<resources>
    <string name="app_name">lab2_RSSreader</string>
    <string name="preferences">Preferences</string>
    <string name="saveButton">Save</string>
    <string name="discardButton">Discard</string>
    <string name="urlToolTip">Enter RSS URL</string>
    <string name="itemsPrFeed">Feed item limit</string>
    <string name="refreshInterval">Refresh interval</string>

    <string-array name="itemsFeed">
        <item>10 in feed</item>
        <item>20 in feed</item>
        <item>30 in feed</item>
    </string-array>
    <string-array name="refreshInterval">
        <item>2</item>
        <item>Update every 15 min</item>
        <item>Update every 30 min</item>
        <item>Update every 1 hour</item>
    </string-array>

</resources>
